Updated the API
